# nuitka_compile_ellipsis_bug

./: pyproject.toml
.github/workflows/: ci.yml
nuitka_compile_ellipsis_bug/: main.py  nodes.py
